[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pytoolbelt"
version = "0.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.26.0",
    "pydantic>=1.8.2",
    "gitdb==4.0.11",
    "GitPython==3.1.43",
    "Jinja2==3.1.4",
    "pydantic==2.7.4",
    "pydantic_core==2.18.4",
    "python-dotenv==1.0.1",
    "PyYAML==6.0.1",
    "semver==3.0.2"
]

[project.optional-dependencies]
dev = [
    "setuptools==63.1.0",
    "build==0.8.0",
    "python-semantic-release==7.29.4",
    "pytest==7.1.2",
    "black==22.6.0"
]

[project.scripts]
pytoolbelt = "pytoolbelt.__main__:main"

[tool.semantic_release]
version_variable = "pytoolbelt/cli/version.py:__version__"
version_toml = "pyproject.toml:project.version"
version_pattern = "README.md:VERSION {version}"
upload_to_pypi = false

[tool.black]
line_length = 120

[tool.setuptools.packages.find]
exclude = ["tests*"]
