[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pytoolbelt-cli"
version = "0.6.4"
description = "A CLI tool to help teams share internal tooling written in python."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.26.0",
    "pydantic>=1.8.2",
    "gitdb==4.0.11",
    "GitPython==3.1.43",
    "Jinja2==3.1.4",
    "pydantic==2.7.4",
    "pydantic_core==2.18.4",
    "python-dotenv==1.0.1",
    "PyYAML==6.0.1",
    "semver==3.0.2",
    "giturlparse==0.12.0",
    "rich==13.7.1",
    "ruff==0.5.5",
    "docker==7.1.0"
]

[project.optional-dependencies]
dev = [
    "setuptools==70.3.0",
    "build==1.2.1",
    "python-semantic-release==9.8.5",
    "pytest==8.2.2",
]

docs = [
    "mkdocs==1.6.0",
    "mkdocstrings-python==1.10.5",
    "mkdocs-material==9.5.29",
    "markdown-include==0.8.1"
]

fmt = [
    "ruff==0.5.5"
]

[project.urls]
homepage = "https://github.com/pytoolbelt/pytoolbelt-cli"
documentation = "https://pytoolbelt.github.io/pytoolbelt-cli/"
changelog = "https://github.com/pytoolbelt/pytoolbelt-cli/blob/main/CHANGELOG.md"

[project.scripts]
pytoolbelt = "pytoolbelt.__main__:main"


[tool.ruff]
line-length = 160

[tool.semantic_release.branches.main]
match = "main"
prerelease_token = "pre"

[tool.semantic_release]
changelog_file = "CHANGELOG.md"
changelog_generate = true
upload_to_vcs_release = false
version_variables = [
    "pytoolbelt/cli/__init__.py:__version__"
]


version_toml = [
    "pyproject.toml:project.version"
]

commit_message = "[skip ci] Automatically generated by python-semantic-release"
build_command = "pip install build==1.2.1 && python -m build ."


[tool.black]
line_length = 120

[tool.isort]
profile = "black"

[tool.setuptools.packages.find]
exclude = ["tests*"]
